# listapp2

./: .env  .gitignore  README.md  docker-compose.yaml  package-lock.json  pyproject.toml  readme.md  requirements.txt
TelegramBot/: tlbot.py
TelegramBot/utils/: functions.py
api/: crud.py  database.py  main.py  main2.py  models.py  requirements.txt  schemas.py  test_data.py
asdf/: README.md  package-lock.json  package.json
bot/: .env  Hello_readme.md  chatgpt.py  listapp.py  models.py  tlbot.py
bot/logs/: main_03-11
bot/utils/: tests.ipynb
extension/: background.js  index.html  index_archive.html  index_main.html  manifest.json  readme.md  script.js  script_archive.js  script_login.js  script_main.js  script_og.js  service_worker.js  style.css
extension/popups/: archived.html  index.html  index_login.html  index_main.html  style.css  style_archive.css  style_login.css  style_main.css
extension/scripts/: archived.js  script_login.js  script_main.js
files/: plan.org  start_all.sh
files/api/: daemon.json  main.py  schemas.py
files/bot/: chatgpt.py  tl2.py
files/extension/: manifest.json  readme.md  service_worker.js
files/webr/: .env  jsconfig.json  package-lock.json
front_listapp/: README.md  package-lock.json  package.json
script_db/: init.sql
web/: index.html  package-lock.json  package.json  vite.config.js
web/.cert/: cert.pem  key.pem
web2/: README.md  package-lock.json  package.json
web3/: README.md  package-lock.json  package.json
webr/: .env  middleware.js  middleware.ts  next.config.js  package-lock.json  package.json
(+181 files in other folders)
