[tool.poetry]
name = "listapp2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
SQLAlchemy = "^2.0.16"
passlib = "^1.7.4"
cryptography = "^41.0.1"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
